<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">

    <ImageView
        android:id="@+id/image1"
        android:layout_width="277dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:src=""
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/text4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:text="@string/welcome"
        android:textColor="#53714B"
        android:textSize="30sp"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/email"
        android:layout_width="361dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/email"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:maxLines="1"
        android:drawableEnd="@drawable/ic_mail_outline_black_24dp"
        android:drawablePadding="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textColor="#53714B"
        android:textColorHint="#53714B"
        android:textSize="25sp"
        android:backgroundTint="#53714B"
        android:autofillHints=""
        tools:ignore="TextFields,UnusedAttribute" />

    <EditText
        android:id="@+id/password"
        android:layout_width="361dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/password"
        android:drawableEnd="@drawable/ic_vpn_key_black_24dp"
        android:drawablePadding="10dp"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:maxLines="1"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textColor="#53714B"
        android:textColorHint="#53714B"
        android:backgroundTint="#53714B"
        android:textSize="25sp"
        android:autofillHints=""
        tools:ignore="TextFields,UnusedAttribute" />

    <Button
        android:id="@+id/login"
        android:layout_width="350dp"
        android:layout_marginTop="33dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/round_button"
        android:text="@string/log_in"
        android:textSize="18sp"
        android:textColor="#ffffff"/>

    <TextView
        android:id="@+id/forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="20dp"
        android:textColor="#53714B"
        android:text="@string/forgot_password"/>


    <TextView
        android:id="@+id/registerpage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginStart="34dp"
        android:layout_marginTop="20dp"
        android:textColor="#53714B"
        android:text="@string/do_not_have_a_account_register"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible" />

</>